--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <META NAME="description" content="Hex is a PC-Game written in HTML and JavaScript">
 <META NAME="author" content="Lutz Tautenhahn">
 <META NAME="keywords" content="Game, Hex, JavaScript">
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-<title>Hex</title>
+<meta charset="utf-8">
+  <title>Hex</title>
 <script language="JavaScript">
 var i, j, k, IsOver=true, IsStart0, Start, Start0, Size=11, IsRunning=false, LastEvent="";
 var MoveCount, MaxMoveCount, MaxFld=Size*Size, IsSwap, ActiveColor=0;
